Add a new post & modify a contact form

--- a/sitemap.html
+++ b/sitemap.html
@@ -2,7 +2,7 @@
 layout: page
 title: サイトマップ
 description: 当サイトの記事をカテゴリ別・タグ別にまとめたページ．
-permalink: /sitemap
+permalink: /sitemap/
 ---
 
 {% comment %}
