Add share functionalities & Modify headings layout

--- a/sitemap.html
+++ b/sitemap.html
@@ -27,7 +27,7 @@ Reference: https://qiita.com/mnishiguchi/items/fa1e8fd2e893ea801ce8
 
 <hr />
 
-<section class="posts-by-tags">
+<section class="sitemap">
   {% for tag_name in tag_names %}
     <h3 id="{{ tag_name }}">
       {{ tag_name | capitalize | replace: "_", " " }}
