--- a/sitemap.html
+++ b/sitemap.html
@@ -30,7 +30,7 @@ Reference: https://qiita.com/mnishiguchi/items/fa1e8fd2e893ea801ce8
 <section class="sitemap">
   {% for tag_name in tag_names %}
     <h3 id="{{ tag_name }}">
-      {{ tag_name | capitalize | replace: "_", " " }}
+      {{ tag_name | eplace: "_", " " }}
     </h3>
     
     <ul>
