--- a/sitemap.html
+++ b/sitemap.html
@@ -25,7 +25,7 @@ Reference: https://qiita.com/mnishiguchi/items/fa1e8fd2e893ea801ce8
 
 {% include tag_cloud.html tag_names=tag_names %}
 
-<hr />
+<hr style="border: none; border-top: 2px dashed;" />
 
 <section class="sitemap">
   {% for tag_name in tag_names %}
